allTypes test passing